Backend work initiated

--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,20 @@
   "description": "codenest version 1",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sunny Sharma, Karan Toraskar, Ganesh Jha, more to come.",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "mongodb": "^6.4.0",
+    "nodemon": "^3.1.0"
+  }
 }
