--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,29 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "codenest version 1",
-  "main": "index.js",
+  "description": "",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "author": "Sunny Sharma, Karan Toraskar, Ganesh Jha, more to come.",
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "colors": "^1.4.0",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.0.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "datauri": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "mongodb": "^6.4.0",
-    "nodemon": "^3.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.11",
+    "validator": "^13.11.0"
   }
 }
