--- a/client/code-nest/package.json
+++ b/client/code-nest/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@coreui/coreui": "^4.3.0",
     "@coreui/react": "^4.11.1",
     "@testing-library/jest-dom": "^5.17.0",
