Course model restructured

--- a/server/config/config.env
+++ b/server/config/config.env
@@ -7,3 +7,7 @@ SMTP_HOST=sandbox.smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=82d198e0d750be
 SMTP_PASS=4247638279d280
+
+CLOUDINARY_CLIENT_NAME = ddcuy2czc
+CLOUDINARY_CLIENT_API = 856254798121153
+CLOUDINARY_CLIENT_SECRET = a2I6PflBowrz_fPqJkLFxnUSVtg
