--- a/client/code-nest/package.json
+++ b/client/code-nest/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@coreui/coreui": "^4.3.2",
     "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "@coreui/coreui": "^4.3.2",
     "@coreui/react": "^4.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +19,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "semantic-ui-dropdown": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
