--- a/client/code-nest/package.json
+++ b/client/code-nest/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zegocloud/zego-uikit-prebuilt": "^2.0.0",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.20",
