--- a/client/code-nest/package.json
+++ b/client/code-nest/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.0.3",
-    "@coreui/coreui": "^4.3.2",
+    "@coreui/coreui": "^4.3.0",
     "@coreui/react": "^4.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,10 +16,12 @@
     "howler": "^2.2.4",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "semantic-ui-dropdown": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
